# MinnsDB

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  API_SPEC.md  API_SPECIFICATION.md  CODE_AUDIT_REPORT.md  COMPARISON_REASONING_BANK.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_READY.md  DOCKER_README.md  Dockerfile  FREE_TIER_IMPLEMENTATION.md  Gplan.md  HERTZ_DEPLOYMENT_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_READY.md  JS_LIBRARY_PROPOSAL.md  LICENSE  MASTER_API_SPEC.md  MVP_SPECIFICATION.md  Makefile  NER_SERVICE_DEPLOYMENT.md  NOTICE  PATENT_FTO_ANALYSIS.md  PERFORMANCE_PLAN.md  PHASE_1_FOUNDATION.md  PHASE_5A_COMPLETE.md  PHASE_5B_COMPLETE.md  PROGRESS_REPORT.md  QUICK_START.md  README.md  SECURITY.md  SEMANTIC_MEMORY_IMPLEMENTATION.md  SETUP_EXTERNAL_NER.md  SYSTEM_SPECIFICATION.md  TECHNICAL_SPECIFICATION.md  TECHNICAL_WRITEUP.md  TEST_GUIDE.md  (+20 more)
crates/agent-db-ast/: Cargo.toml
crates/agent-db-ast/src/: diff.rs  entities.rs  error.rs  lib.rs  parser.rs  tests.rs
crates/agent-db-ast/src/languages/: mod.rs  rust.rs
crates/agent-db-core/: Cargo.toml
crates/agent-db-core/src/: config.rs  error.rs  event_time.rs  lib.rs  tenant.rs  traits.rs  types.rs  utils.rs
crates/agent-db-events/: Cargo.toml
crates/agent-db-events/src/: buffer.rs  causality.rs  context.rs  core.rs  lib.rs  ner.rs  validation.rs
crates/agent-db-graph/: Cargo.toml
crates/agent-db-graph/benches/: query_filter.rs
crates/agent-db-graph/src/: active_retrieval_test.rs  analytics.rs  catalog.rs  code_graph.rs  community_summary.rs  compression.rs  consolidation.rs  context_enrichment.rs  contracts.rs  decision_trace.rs  domain_schema.rs  episodes.rs  event_content.rs  event_ordering.rs  export.rs  goal_store.rs  graph_pruning.rs  graph_store.rs  graph_view.rs  indexing.rs  inference.rs  integration.rs  integration_claims.rs  integration_ner.rs  intern.rs  learning.rs  lib.rs  llm_client.rs  maintenance.rs  memory.rs  memoryLegacy.rs  memory_audit.rs  memory_classifier.rs  metadata_normalize.rs  multi_tenant.rs  ontology.rs  ontology_evolution.rs  redb_graph_store.rs  refinement.rs  scoped_inference.rs  (+12 more)
crates/agent-db-graph/src/algorithms/: centrality.rs  label_propagation.rs  louvain.rs  mod.rs  parallel.rs  random_walk.rs  temporal_reachability.rs
crates/agent-db-graph/src/claims/: embedding_queue.rs  embeddings.rs  extractor.rs  hybrid_search.rs  llm_client.rs  mod.rs  store.rs  types.rs
crates/agent-db-graph/src/conversation/: answer_composer.rs  bridge.rs  classifier.rs  compaction.rs  compaction_legacy.rs  graph_projection.rs  llm_classifier.rs  mod.rs  nlq_ext.rs  numeric_reasoning.rs  parsers.rs  types.rs
crates/agent-db-graph/src/federated_search/: http_client.rs  mod.rs
crates/agent-db-graph/src/integration/: constructor.rs  event_processing.rs  execution.rs  export_import.rs  graph_analytics.rs  graph_building.rs  graph_delete.rs  lifecycle.rs  mod.rs  ontology.rs  persistence.rs  pipeline.rs  planning.rs  planning_llm_adapter.rs  queries.rs  stats.rs  world_model.rs
crates/agent-db-graph/src/memory/: mod.rs  similarity.rs  synthesis.rs
crates/agent-db-graph/src/nlp/: gazetteer.rs  mod.rs  numbers.rs
crates/agent-db-graph/src/nlq/: builder.rs  drift.rs  entity.rs  executor.rs  feedback.rs  (+9 more)
crates/agent-db-graph/tests/: benchmark_pipeline_test.rs  claims_integration.rs  conversation_pipeline_test.rs  export_import_test.rs  full_integration_test.rs  integration_persistence.rs  integration_test.rs.old  new_features_integration.rs  qdrant_fixture_smoke.rs
crates/agent-db-ner/: Cargo.toml  create-ner-service.sh
crates/agent-db-ner/src/: extractor.rs  lib.rs  queue.rs  storage.rs
crates/agent-db-storage/: Cargo.toml
crates/agent-db-storage/src/: commit_coordinator.rs  engine.rs  lib.rs  redb_backend.rs  rocksdb_backend.rs  schema.rs  versioned.rs  wal.rs
crates/agent-db-tables/: Cargo.toml
crates/agent-db-tables/src/: catalog.rs  compaction.rs  error.rs  import.rs  lib.rs  page.rs  page_store.rs  persistence.rs  row_codec.rs  schema.rs  stats.rs  table.rs  types.rs
crates/minns-auth/: Cargo.toml
crates/minns-auth/src/: error.rs  key.rs  lib.rs  middleware.rs  store.rs
crates/minns-cli/: Cargo.toml
crates/minns-cli/src/: client.rs  config.rs  main.rs
crates/minns-sdk/: Cargo.toml
crates/minns-sdk-macros/: Cargo.toml
crates/minns-sdk-macros/src/: lib.rs
crates/minns-sdk/src/: abi.rs  host.rs  lib.rs  types.rs
crates/minns-vectors/: Cargo.toml
crates/minns-vectors/src/: error.rs  filter.rs  lib.rs  point.rs  qdrant.rs  query.rs  store.rs
crates/minns-vectors/tests/: qdrant_integration.rs
crates/minns-wasm-runtime/: Cargo.toml
crates/minns-wasm-runtime/src/: abi.rs  error.rs  host_functions.rs  lib.rs  module.rs  permissions.rs  persistence.rs  registry.rs  runtime.rs  scheduler.rs  triggers.rs  usage.rs
examples/: Cargo.toml  basic_pipeline.rs  basic_usage.rs  concurrent_events.rs  end_to_end_demo.rs  graph_integration.rs  scoped_inference.rs  storage_pipeline.rs
ml/agent-db-planning/: Cargo.toml
ml/agent-db-planning/src/: lib.rs  llm_client.rs  llm_generator.rs  mock_generator.rs  orchestrator.rs  prompts.rs  repair.rs  selector.rs  types.rs  validation.rs
ml/agent-db-world-model/: Cargo.toml
ml/agent-db-world-model/src/: ebm.rs  encoders.rs  energy.rs  lib.rs  persistence.rs  scoring.rs  training.rs  types.rs
server/: Cargo.toml  REFACTORING_SUMMARY.md  sdk.ts  tmpclaude-0051-cwd
server/src/: auth_middleware.rs  config.rs  errors.rs  jobs.rs  lib.rs  main.rs  main_old_backup.rs  models.rs  read_gate.rs  routes.rs  sequence.rs  state.rs  subscription_task.rs  write_lanes.rs
server/src/handlers/: agents.rs  analytics.rs  auth.rs  claims.rs  code.rs  conversation.rs  events.rs  export_import.rs  graph.rs  graph_import.rs  health.rs  jobs.rs  memories.rs  metrics.rs  mod.rs  modules.rs  nlq.rs  ontology_evolution.rs  query.rs  search.rs  strategies.rs  structured_memory.rs  subscriptions.rs  tables.rs  workflows.rs  world_model.rs  ws.rs
server/tests/: end_to_end.rs  graph_delete.rs  query_keyword_columns.rs
(+204 files in other folders)
