[workspace]
resolver = "2"
members = [
    "crates/agent-db-ast",
    "crates/agent-db-core",
    "crates/agent-db-events",
    "crates/agent-db-storage",
    "crates/agent-db-graph",
    "crates/agent-db-ner",
    "ml/agent-db-world-model",
    "ml/agent-db-planning",
    "examples",
    "server",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = ">=0.3.47"  # Security: Override vulnerable transitive dependency from serde_with

# Collections and data structures
indexmap = "1.9"
smallvec = "1.10"
parking_lot = "0.12"
rustc-hash = "2.1"

# Performance
rayon = "1.7"
crossbeam = "0.8"

# Storage
memmap2 = "0.5"
lz4 = "1.24"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
criterion = "0.5"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
lto = true