[package]
name = "eventgraphdb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
agent-db-graph = { path = "../crates/agent-db-graph" }
agent-db-events = { path = "../crates/agent-db-events" }
agent-db-core = { path = "../crates/agent-db-core" }
agent-db-planning = { path = "../ml/agent-db-planning" }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io", "io-util"] }
futures = "0.3"
bytes = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"
axum-macros = "0.5.0"
