[package]
name = "minnsdb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
agent-db-graph = { path = "../crates/agent-db-graph" }
agent-db-events = { path = "../crates/agent-db-events" }
agent-db-core = { path = "../crates/agent-db-core" }
agent-db-planning = { path = "../ml/agent-db-planning" }
agent-db-tables = { path = "../crates/agent-db-tables" }
agent-db-storage = { path = "../crates/agent-db-storage" }
minns-wasm-runtime = { path = "../crates/minns-wasm-runtime" }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io", "io-util"] }
futures = "0.3"
bytes = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"
axum-macros = "0.5.0"

# Encoding
base64 = "0.22"

# Concurrency
parking_lot = "0.12"
dashmap = "6"
num_cpus = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.4", features = ["util"] }
hyper = "1"
http-body-util = "0.1"
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
