[package]
name = "agent-db-core"
version = "0.1.0"
edition = "2021"
description = "Core traits, types, and error handling for Agentic Database"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"