[package]
name = "agent-db-core"
description = "Core traits, types, and error handling for MinnsDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"