[package]
name = "agent-db-events"
version = "0.1.0"
edition = "2021"
description = "Event system for Agentic Database"

[dependencies]
agent-db-core = { path = "../agent-db-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
bincode = "1.3"