[package]
name = "agent-db-events"
description = "Event ingestion and processing for MinnsDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-db-core = { path = "../agent-db-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.0"
uuid = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
indexmap = { workspace = true }
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"
bincode = "1.3"