[package]
name = "agent-db-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-db-core = { path = "../agent-db-core" }
agent-db-events = { path = "../agent-db-events" }
agent-db-storage = { path = "../agent-db-storage" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "1.9"
thiserror = "1.0"
tracing = "0.1"
# rayon = "1.5"  # Requires Rust 1.80+, temporarily disabled for compatibility