[package]
name = "agent-db-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-db-core = { path = "../agent-db-core" }
agent-db-events = { path = "../agent-db-events" }
agent-db-storage = { path = "../agent-db-storage" }
agent-db-ner = { path = "../agent-db-ner" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
indexmap = "1.9"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
redb = "2.1"
# rayon = "1.5"  # Requires Rust 1.80+, temporarily disabled for compatibility

[features]
default = []

[dev-dependencies]
tempfile = "3.8"