[package]
name = "agent-db-graph"
description = "Temporal knowledge graph engine for MinnsDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-db-core = { path = "../agent-db-core" }
agent-db-events = { path = "../agent-db-events" }
agent-db-storage = { path = "../agent-db-storage" }
agent-db-ner = { path = "../agent-db-ner" }
agent-db-world-model = { path = "../../ml/agent-db-world-model" }
agent-db-planning = { path = "../../ml/agent-db-planning" }
agent-db-ast = { path = "../agent-db-ast", optional = true }
agent-db-tables = { path = "../agent-db-tables" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
rmp-serde = "1.3"
indexmap = "1.9"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
redb = "2.1"
dashmap = "5.5"  # Lock-free concurrent HashMap for better performance
blake3 = "1.5"
rayon = "1.10"
crossbeam = "0.8"
strsim = "0.11"
instant-distance = "0.6"
smallvec = { version = "1.13", features = ["serde"] }
lru = "0.16"
sha2 = "0.10"
parking_lot = "0.12"
rustc-hash = "2.1"
ordered-float = { version = "4.2", features = ["serde"] }
rust-stemmers = "1.2"
rio_turtle = "0.8"
rio_api = "0.8"
oxiri = "0.2"

[features]
default = []
code-intelligence = ["dep:agent-db-ast"]

[[bench]]
name = "query_filter"
harness = false

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.1"
criterion = "0.5"