[package]
name = "agent-db-ner"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
agent-db-core = { path = "../agent-db-core" }
agent-db-events = { path = "../agent-db-events" }

# NER - External service (rust-bert moved to separate microservice)
# No heavy ML dependencies in main build
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"

# Database
redb = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
