[package]
name = "agent-db-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-db-core = { path = "../agent-db-core" }
agent-db-events = { path = "../agent-db-events" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
memmap2 = "0.5"
lz4 = "1.24"
crossbeam = "0.8"
thiserror = "1.0"