[package]
name = "agent-db-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-db-core = { path = "../agent-db-core" }
agent-db-events = { path = "../agent-db-events" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
thiserror = "1.0"
redb = "=2.1.3"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"