[package]
name = "agent-db-storage"
description = "ReDB persistence backend for MinnsDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-db-core = { path = "../agent-db-core" }
agent-db-events = { path = "../agent-db-events" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
thiserror = "1.0"
redb = "=2.1.3"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"