[package]
name = "agent-db-tables"
description = "Bi-temporal row store with page-based storage for MinnsDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-db-core = { path = "../agent-db-core" }
agent-db-storage = { path = "../agent-db-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rustc-hash = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
smallvec = "1.10"
thiserror = "1.0"
csv = "1.3"
blake3 = "1.5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
