[package]
name = "minns-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for MinnsDB — cross-session memory and workflow orchestration"

[[bin]]
name = "minns"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Utilities
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
colored = "2"
toml = "0.8"
