[package]
name = "minns-sdk-macros"
description = "Proc macros for the MinnsDB WASM module SDK"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
keywords = ["database", "wasm", "agent", "graph"]
categories = ["database", "wasm"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
