[package]
name = "minns-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building MinnsDB WASM agent modules"
license = "Apache-2.0"
repository = "https://github.com/journeyintoai/minnsdb"
keywords = ["database", "wasm", "agent", "graph"]
categories = ["database", "wasm"]

[dependencies]
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minns-sdk-macros = { version = "0.1.0", path = "../minns-sdk-macros" }
