[package]
name = "minns-sdk"
description = "SDK for building MinnsDB WASM agent modules"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
keywords = ["database", "wasm", "agent", "graph"]
categories = ["database", "wasm"]

[dependencies]
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minns-sdk-macros = { version = "0.1.0", path = "../minns-sdk-macros" }
