[package]
name = "agent-db-world-model"
version = "0.1.0"
edition = "2021"
description = "Energy-based predictive coding world model (Critic) for MinnsDB"

[dependencies]
agent-db-core = { path = "../../crates/agent-db-core" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
tracing = "0.1"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
