[package]
name = "agent-db-world-model"
description = "Energy-based predictive coding world model (Critic) for MinnsDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-db-core = { path = "../../crates/agent-db-core" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
tracing = "0.1"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
